<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpaper_vertical"
    android:id="@+id/main_page">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="60dp"
        android:text="Gran Centre\nGranollers"/>

    <GridLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="80dp"
        android:layout_centerInParent="true"
        android:id="@+id/grid_buttons">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_business"
            android:src="@drawable/negocis"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_margin="5dp"
            android:background="@null"
            android:contentDescription="@string/imatge_negocis"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_hotels"
            android:src="@drawable/hotels"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_margin="5dp"
            android:background="@null"
            android:contentDescription="@string/imatge_hotels"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_restaurants"
            android:src="@drawable/restaurants"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_margin="5dp"
            android:background="@null"
            android:contentDescription="@string/imatge_restaurants"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_cartellera"
            android:src="@drawable/cartellera"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_margin="5dp"
            android:background="@null"
            android:contentDescription="@string/imatge_cartellera"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_parking"
            android:src="@drawable/parkings"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_margin="5dp"
            android:background="@null"
            android:contentDescription="@string/imatge_parkings"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_transports"
            android:src="@drawable/transports"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_margin="5dp"
            android:background="@null"
            android:contentDescription="@string/imatge_transports"
            />

    </GridLayout>

</RelativeLayout>

</LinearLayout>