<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movies">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/cartellera_background"
        android:id="@+id/movies_page">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="Cine"
                android:background="@color/marfil"
                app:navigationIcon="@drawable/ic_menu"
                />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <com.google.android.material.card.MaterialCardView
                    android:layout_marginTop="50dp"
                    android:layout_width="250dp"
                    android:layout_height="450dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="200dp"
                        android:layout_height="280dp"
                        android:layout_gravity="top|center"
                        android:layout_marginTop="20dp"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        app:srcCompat="@drawable/cartellera_img1" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="80dp"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textAllCaps="true"
                        android:text="@string/peli_1"
                        android:textAlignment="center"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/grey"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/info"
                        android:textAlignment="center">
                    </com.google.android.material.button.MaterialButton>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_marginTop="50dp"
                    android:layout_width="250dp"
                    android:layout_height="450dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="200dp"
                        android:layout_height="280dp"
                        android:layout_gravity="top|center"
                        android:layout_marginTop="20dp"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        app:srcCompat="@drawable/cartellera_img2" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="70dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textAllCaps="true"
                        android:text="@string/peli_2"
                        android:textAlignment="center"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/grey"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/info"
                        android:textAlignment="center">
                    </com.google.android.material.button.MaterialButton>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_marginTop="50dp"
                    android:layout_width="250dp"
                    android:layout_height="450dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="200dp"
                        android:layout_height="280dp"
                        android:layout_gravity="top|center"
                        android:layout_marginTop="20dp"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        app:srcCompat="@drawable/cartellera_img3" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="70dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textAllCaps="true"
                        android:text="@string/peli_3"
                        android:textAlignment="center"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/grey"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/info"
                        android:textAlignment="center">
                    </com.google.android.material.button.MaterialButton>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_marginTop="50dp"
                    android:layout_width="250dp"
                    android:layout_height="450dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="200dp"
                        android:layout_height="280dp"
                        android:layout_gravity="top|center"
                        android:layout_marginTop="20dp"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        app:srcCompat="@drawable/cartellera_img4" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="80dp"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textAllCaps="true"
                        android:text="@string/peli_4"
                        android:textAlignment="center"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/grey"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/info"
                        android:textAlignment="center">
                    </com.google.android.material.button.MaterialButton>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_marginTop="50dp"
                    android:layout_width="250dp"
                    android:layout_height="450dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="200dp"
                        android:layout_height="280dp"
                        android:layout_gravity="top|center"
                        android:layout_marginTop="20dp"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        app:srcCompat="@drawable/cartellera_img5" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="80dp"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textAllCaps="true"
                        android:text="@string/peli_5"
                        android:textAlignment="center"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/grey"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/info"
                        android:textAlignment="center">
                    </com.google.android.material.button.MaterialButton>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_marginTop="50dp"
                    android:layout_width="250dp"
                    android:layout_height="450dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="200dp"
                        android:layout_height="280dp"
                        android:layout_gravity="top|center"
                        android:layout_marginTop="20dp"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        app:srcCompat="@drawable/cartellera_img6" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="80dp"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textAllCaps="true"
                        android:text="@string/peli_6"
                        android:textAlignment="center"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/grey"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/info"
                        android:textAlignment="center">
                    </com.google.android.material.button.MaterialButton>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_marginTop="50dp"
                    android:layout_width="250dp"
                    android:layout_height="450dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="200dp"
                        android:layout_height="280dp"
                        android:layout_gravity="top|center"
                        android:layout_marginTop="20dp"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        app:srcCompat="@drawable/cartellera_img7" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="80dp"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textAllCaps="true"
                        android:text="@string/peli_7"
                        android:textAlignment="center"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/grey"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/info"
                        android:textAlignment="center">
                    </com.google.android.material.button.MaterialButton>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_marginTop="50dp"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/transparente">
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/lateral_menu"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/navigation_items">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>